# auguri-o-matic

./: .gitignore  README.md  main.py  names.txt  pyproject.toml
