[tool.poetry]
name = "auguri"
version = "0.1.0"
description = "Auguri personalizzati da Maccio in persona proprio lui"
authors = ["Domenico Testa <domenico.testa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
